Alter the location on the fix for text overflow on submenus

--- a/Website/Resources/Shared/stylesheets/dnndefault/8.0.0/default.css
+++ b/Website/Resources/Shared/stylesheets/dnndefault/8.0.0/default.css
@@ -3582,3 +3582,8 @@ div.dnnSliderInput .dnnTooltip .dnnFormHelpContent {
 	z-index: 1;
 }
 /*END DNN Slider Input Style*/
+
+
+#dnnMenu .dropdown-menu {
+    overflow-x: hidden
+}
